{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 78,
  "lineage": "91f5497a-7ebd-cc16-32cf-61a78c1162b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0bf445712e1614f54",
            "domain": "vpc",
            "id": "eipalloc-0208669d791fc065a",
            "network_interface": "eni-0adfd7e7f59a7e00a",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-15-207-147-130.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.147.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prodgw1",
            "aws_network_interface.vmnic1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b5fbc2cb28b77b8",
            "arn": "arn:aws:ec2:ap-south-1:575375916036:instance/i-0f6ade208aca61c73",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6ade208aca61c73",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0adfd7e7f59a7e00a"
              }
            ],
            "primary_network_interface_id": "eni-0adfd7e7f59a7e00a",
            "private_dns": "ip-10-0-1-50.ap-south-1.compute.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "15.207.147.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03aac711dbdb4d1de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089188c9887194b40",
            "tags": {
              "Name": "EC2-Ubuntu"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f158c77eb271b759"
            ]
          },
          "dependencies": [
            "aws_network_interface.vmnic1",
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prodgw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:575375916036:internet-gateway/igw-0b25bc2038dd40bab",
            "id": "igw-0b25bc2038dd40bab",
            "owner_id": "575375916036",
            "tags": {
              "Name": "Prod_IGW1"
            },
            "vpc_id": "vpc-0a6eca2ddaa715186"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "vmnic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0adfd7e7f59a7e00a",
            "mac_address": "02:e4:0a:b3:99:04",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f158c77eb271b759"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089188c9887194b40"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Prod_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f8ad312c680fa1aa",
            "owner_id": "575375916036",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b25bc2038dd40bab",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b25bc2038dd40bab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Prod_route1"
            },
            "vpc_id": "vpc-0a6eca2ddaa715186"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ee2ac64f1e20b1",
            "route_table_id": "rtb-0f8ad312c680fa1aa",
            "subnet_id": "subnet-089188c9887194b40"
          },
          "dependencies": [
            "aws_internet_gateway.prodgw1",
            "aws_route_table.Prod_route",
            "aws_subnet.subnet1",
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:575375916036:security-group/sg-0f158c77eb271b759",
            "description": "Allow webtraffic inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f158c77eb271b759",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_webtrafic",
            "name_prefix": "",
            "owner_id": "575375916036",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6eca2ddaa715186"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:575375916036:subnet/subnet-089188c9887194b40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-089188c9887194b40",
            "map_public_ip_on_launch": false,
            "owner_id": "575375916036",
            "tags": {
              "Name": "Prod_sub1"
            },
            "vpc_id": "vpc-0a6eca2ddaa715186"
          },
          "dependencies": [
            "aws_vpc.main1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:575375916036:vpc/vpc-0a6eca2ddaa715186",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a2819196149138d",
            "default_route_table_id": "rtb-0c9be7482f3e1974b",
            "default_security_group_id": "sg-009ee72da23aa79d4",
            "dhcp_options_id": "dopt-99e81cf2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a6eca2ddaa715186",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c9be7482f3e1974b",
            "owner_id": "575375916036",
            "tags": {
              "Name": "Prod_VPC1"
            }
          }
        }
      ]
    }
  ]
}